--- a/body.css
+++ b/body.css
@@ -19,14 +19,15 @@ h3{
     margin: 0;
     padding: 0;
     font-family: Arial;
+    font-size: 20px;
 }
 button{
-    padding-left:10px;
-    padding-right: 10px;
-    height: 25px;
+    padding: 10px 10px 10px 10px;
+    height: 35px;
     margin-top:10px;
     margin-bottom: 10px;
     font-weight: 600;
+    font-size: 15px;
 }
 .apply-button{
     margin-left: 15px;
