--- a/body.css
+++ b/body.css
@@ -14,12 +14,11 @@ span{
     font-size: 30px;
     font-weight: 200;
 }
-p,
-h3{
+p{
     margin: 0;
     padding: 0;
     font-family: Arial;
-    font-size: 20px;
+    font-size: 8px;
 }
 button{
     padding: 10px 10px 10px 10px;
@@ -50,6 +49,7 @@ img{
 }
 .sub-heading{
     margin-bottom: 10px;
+    font-size: 10px;
 }
 h4{
     font-weight: 500;
